--- a/app/src/main/res/drawable/default_item_background.xml
+++ b/app/src/main/res/drawable/default_item_background.xml
@@ -15,9 +15,10 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/selected_btn_background" android:state_hovered="true" />
-    <item android:drawable="@drawable/selected_btn_background" android:state_selected="true" />
-    <item android:drawable="@drawable/selected_btn_background" android:state_pressed="true" />
-    <item android:drawable="@drawable/selected_btn_background" android:state_focused="true" />
-    <item android:drawable="@drawable/default_item_background" />
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/background_app" />
+            <corners android:radius="@dimen/radius_scale" />
+        </shape>
+    </item>
 </selector>
