--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,7 +27,7 @@
 
     <dimen name="icons_size">24dp</dimen>
     <dimen name="medium_icons_size">16dp</dimen>
-
+    <dimen name="fab_intercom_size">56dp</dimen>
     <dimen name="radius_scale">4dp</dimen>
     <dimen name="date_picker_text_size">18sp</dimen>
 </resources>
