--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -30,6 +30,16 @@
         android:layout_alignParentTop="true"/>
 
     <include
+        android:id="@+id/fab_included_layout_id"
+        layout="@layout/custom_fab_btn_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space16"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true" />
+
+    <include
         layout="@layout/progress_bar_no_data_tv_layout"
         tools:visibility="gone" />
 
