--- a/app/src/main/res/layout/action_bar_title_layout.xml
+++ b/app/src/main/res/layout/action_bar_title_layout.xml
@@ -29,9 +29,26 @@
         android:layout_height="match_parent"
         style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
         android:textColor="@color/white"
+        android:textSize="@dimen/title_text_size"
         android:gravity="start"
         android:ellipsize="end"
         android:maxLines="2"
-        tools:text="@string/app_name"/>
+        tools:text="@string/app_name"
+        tools:ignore="SpUsage" />
+
+    <TextView
+        android:id="@+id/action_bar_subtitle"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
+        android:textColor="@color/white"
+        android:textSize="@dimen/subtitle_text_size"
+        android:gravity="start"
+        android:ellipsize="end"
+        android:maxLines="2"
+        android:visibility="gone"
+        tools:text="@string/app_name"
+        tools:visibility="visible"
+        tools:ignore="SpUsage" />
 
 </LinearLayout>
