--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,7 @@
     <dimen name="fab_intercom_size">56dp</dimen>
     <dimen name="radius_scale">4dp</dimen>
     <dimen name="date_picker_text_size">18sp</dimen>
+    <!--action bar text sizes are in dp not sp as the size of the Toolbar is fixed and, unlike other widgets, will not expand to contain text enlarged by changes to the phone settings-->
+    <dimen name="title_text_size">20dp</dimen>
+    <dimen name="subtitle_text_size">14dp</dimen>
 </resources>
