- apply more concepts in DI - detect search keyword language - show the article web page in a web view

--- a/app/src/main/res/layout/custom_fab_btn_layout.xml
+++ b/app/src/main/res/layout/custom_fab_btn_layout.xml
@@ -28,6 +28,8 @@
        android:layout_width="@dimen/fab_intercom_size"
        android:layout_height="@dimen/fab_intercom_size"
        android:background="@drawable/fab_background"
+       android:visibility="gone"
+       tools:visibility="visible"
        tools:ignore="UselessParent">
 
        <!--  instead of using fab-->
