- use the activity instead of the fragment - keep the recycler view position after rotation
- use the activity instead of the fragment

- keep the recycler view position after rotation

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -38,7 +38,7 @@
         android:padding="@dimen/space8"
         android:layout_below="@id/search_view"/>
 
-    <include layout="@layout/activity_section"
+    <include layout="@layout/fragment_articles"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/search_view"/>
